--- a/css/style.css
+++ b/css/style.css
@@ -76,13 +76,18 @@ main section:nth-child(3) div h2{
     
 }
 
-main section:nth-child(3) div button{
+ button{
     
     background-color: rgb(3, 3, 3);
     padding: 10px 10px;
     color: white;
-    
-}
+    transition: 350ms;
+    }
+
+    button :hover{
+   background-color: indianred;
+    }
+
 
 footer{
     background-color: rgb(90, 81, 81);
