--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,8 @@ main section:nth-child(3) div h2{
     }
 
     button:hover{
-   background-color: rgb(167, 89, 89);
-   color: indigo;
+   background-color: rgb(85, 49, 49);
+   color: rgb(42, 3, 68);
     }
 
 
